[gd_scene load_steps=2 format=3 uid="uid://cbjejnholt2js"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_owqum"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_owqum")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 79.0
offset_bottom = 101.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="outside" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "OUTSIDE"

[node name="room" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "ROOM"

[node name="options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "OPTIONS"

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="MarginContainer/VBoxContainer/outside" to="." method="_on_outside_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/room" to="." method="_on_room_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
